<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">A Lenda de Oguh</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="LoginBtn">Login</string>
    <string name="SignupBtn">Sign Up</string>
    <string name="BackBtn">Back</string>
    <string name="LogoutBtn">Log Out</string>
    <string name="Email">Email</string>
    <string name="User">User</string>
    <string name="Score">Score</string>
    <string name="Stage">Stage</string>

</resources>
