<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="10dip" >
 
    <TextView
        android:id="@+id/txtusername"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/Username" />
 
    <EditText
        android:id="@+id/username"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtusername"
        android:inputType="text" />
 
    <TextView
        android:id="@+id/txtpassword"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/username"
        android:text="@string/Password" />
 
    <EditText
        android:id="@+id/password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtpassword"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/signup"
        android:layout_alignBottom="@+id/signup"
        android:layout_marginRight="24dp"
        android:layout_toLeftOf="@+id/signup"
        android:text="@string/LoginBtn" />

    <Button
        android:id="@+id/signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/back"
        android:layout_alignBottom="@+id/back"
        android:layout_centerHorizontal="true"
        android:text="@string/SignupBtn" />

    <Button
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="18dp"
        android:layout_toRightOf="@+id/signup"
        android:text="@string/BackBtn" />
 
</RelativeLayout>