<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dip" >
 
    <TextView
        android:id="@+id/txtemail"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/Email" />
 
    <EditText
        android:id="@+id/email"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtemail"
        android:inputType="textEmailAddress" />
    
    <TextView
        android:id="@+id/txtusername"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email"
        android:text="@string/Username" />
 
    <EditText
        android:id="@+id/username"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtusername"
        android:inputType="text" />
 
    <TextView
        android:id="@+id/txtpassword"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/username"
        android:text="@string/Password" />
 
    <EditText
        android:id="@+id/password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtpassword"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password"
        android:layout_marginRight="18dp"
        android:layout_marginTop="18dp"
        android:layout_toLeftOf="@+id/back"
        android:text="@string/SignupBtn" />

    <Button
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/signup"
        android:layout_alignBottom="@+id/signup"
        android:layout_alignRight="@+id/password"
        android:layout_marginRight="175dp"
        android:text="@string/BackBtn" />
 
</RelativeLayout>